# fediverse-jsonschema

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: activitystreams2-context.json  link-relations-1.csv
fediverse_jsonschema/: validation.py
schemas/: jrd-schema.json
schemas/ap/: activitypub-schema.json  actor-schema.json  endpoints-schema.json  object-schema.json
schemas/as2/: accept-base-schema.json  accept-schema.json  activity-base-schema.json  activity-schema.json  activitystreams2-schema.json  collection-base-schema.json  collection-schema.json  collectionpage-base-schema.json  collectionpage-schema.json  document-base-schema.json  document-schema.json  extonly-schema.json  ignore-base-schema.json  ignore-schema.json  intransitiveactivity-base-schema.json  intransitiveactivity-schema.json  link-base-schema.json  link-schema.json  object-base-schema.json  object-schema.json  offer-base-schema.json  offer-schema.json  orderedcollection-base-schema.json  orderedcollection-schema.json  orderedcollectionpage-schema.json  place-schema.json  profile-schema.json  question-base-schema.json  question-schema.json  reject-base-schema.json  reject-schema.json  relationship-schema.json  tombstone-schema.json  untyped-schema.json
schemas/mastodon/: README.md  accept-schema.json  activity-base-schema.json  activity-schema.json  add-schema.json  announce-schema.json  block-schema.json  create-schema.json  delete-schema.json  (+13 more)
tests/: conftest.py  test_documents.py  test_json_schema.py  test_jsonld.py  test_resolver.py
(+114 files in other folders)
