[tool.poetry]
name = "fediverse-jsonschema"
version = "0.1.0"
description = ""
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
pytest = "^7.4.2"
jsonschema = { version = "^4.19.1", extras = ["format"] }
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
